<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_flags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/ireland_flag"
                android:id="@+id/ireland_flag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="16dp"
                android:src="@drawable/irelandflag"
                android:alpha="0.80"/>

            <ImageView
                android:contentDescription="@string/bulgaria_flag"
                android:id="@+id/bulgaria_flag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="16dp"
                android:src="@drawable/bulgariaflag"
                android:alpha="0.80"/>

        </LinearLayout>

    <TextView
        style="@style/strokeLetteringTie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="42sp"
        android:text="@string/a_tie"/>

</RelativeLayout>


